# MailPilot

./: .gitignore  README.md  README_CN.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c92b7d1c0af_add_gmail_accounts.py  53ffc429a5b1_add_draft_send_error.py  5427824fe2cb_add_ai_metadata_to_outputs.py  654289579ece_add_email_attachments.py  6629166b3b5e_add_users.py  6b63f46afa3f_add_spam_fields.py  7b1e1f0a2c4d_add_background_jobs.py  8c2d3f4e5b6a_add_email_soft_delete.py  951aabbdf27e_initial.py  9d4e5f6a7b8c_add_manual_draft_fields.py  a1a8a121593b_add_sync_dedup_index.py  c320c152a427_add_email_provider_fields.py  c35a0735da9d_initial.py  d1814ba76736_add_outlook_accounts.py  edef68288b74_add_audit_logs.py  f0b69b28feec_add_user_id_to_data_models.py
backend/app/: cli.py  main.py
backend/app/ai/: __init__.py  metadata.py  parsing.py  prompts.py  retry.py  rules.py  spam.py
backend/app/api/: deps.py  oauth_utils.py  router.py
backend/app/core/: config.py  crypto.py
backend/app/db/: models.py  session.py
backend/app/mock_data/: emails.json
backend/app/schemas/: __init__.py  ai.py  auth.py  draft.py  (+8 more)
backend/tests/: conftest.py  test_ai_evaluation.py  test_ai_provider.py  test_audit.py  test_auth.py  test_cli.py  test_dashboard.py  test_drafts.py  test_emails.py  test_encryption.py  test_gmail_oauth.py  test_jobs.py  test_mail_send.py  test_mock_ai_evaluation.py  test_outlook_oauth.py  test_reminders.py  test_retry.py  test_settings_encryption.py  test_spam.py  test_sync.py
(+81 files in other folders)
